<resources>
    <string name="app_name">DAM-SmartMoney</string>
    <string name="gastos_fijos">"Gastos fijos %: "</string>
    <string name="total">Total:</string>
    <string name="ahorros">Ahorros:</string>
    <string name="inversion">Inversión:</string>
    <string name="mes">Mes</string>
    <string name="add">+ Agregar Gasto</string>
    <string name="add_symbol" translatable="false">+</string>
    <string name="money">$$.$$</string>
    <string name="percentage" translatable="false">%%.%%</string>
    <string name="ok" translatable="false">OK</string>
    <string name="x">Cancelar</string>
    <string name="descripcion">Tipo de categoría</string>
    <string name="nombre">Nombre</string>
    <string name="money_space">$:</string>
    <string name="nombre_space">Nombre:</string>
    <string name="categoria">Categoría:</string>
    <string name="fecha">Fecha:</string>
    <string name="fecha_space" translatable="false">DD/MM/YYYY</string>
    <string name="saldo_total">Saldo Total:</string>
    <string name="categorias">Categorías</string>
    <string name="image" translatable="false">Image</string>
    <string name="actualizar_ingresos">Actualizar Ingresos</string>
    <string name="razon">Razón:</string>
    <string name="monto">Monto:</string>
    <string name="bienvenidos">Bienvenid@ a SMART MONEY</string>
    <string name="gracias_por_descargar">Gracias por descargar</string>
    <string name="billetera">Billetera</string>
    <string name="ingresa_el_dinero_con_el_que_cuentas_en_efectivo_actualmente">Ingresa el dinero con el que cuentas en efectivo actualmente</string>
    <string name="enter_user_name">Ingrese su nombre</string>
    <string name="btn_add_category">Añadir categoría +</string>
    <string name="important_expence_date" translatable="false">dd/MM/yyyy</string>
    <string name="cantidad">Cantidad</string>
    <string name="returnBTN">Volver</string>
    <string name="btn_categorias_page">Ver Categorías</string>
    <string name="txtCategoria">Categorías</string>
    <string name="txt_planeacion_title">Planeación</string>
    <string name="_0" translatable="false">0</string>
    <string name="cantidad2">Cantidad:</string>
    <string name="agregar_gasto">Agregar gasto</string>
    <string name="a_o">Año</string>
    <string name="categoria3">Categoria</string>
    <string name="a_adir_imagen">Añadir imagen</string>
    <string name="dinero_total">Dinero total:</string>
    <string name="planning" translatable="false">Planning</string>
    <string name="ahorros2">Ahorros %:</string>
    <string name="inversi_n">Inversión %:</string>
    <string name="total_sobrante">Total restante:</string>
    <string name="dinero_inicial">Dinero inicial:</string>
    <string name="categor_a">Categoría:</string>
    <string name="ingrese_la_cantidad">Ingrese la cantidad</string>
    <string name="evento">Evento:</string>
    <string name="fecha2">Fecha:</string>
    <string name="acerca_de_nosotros">Acerca de nosotros</string>
    <string name="actualizar_salario">Actualizar salario</string>
    <string name="txtsalario">Salario:</string>
    <string name="txt_salario_actual">Salario actual</string>
    <string name="txt_eliminar_gasto">Eliminar gasto</string>
    <string name="btn_manejar_gastos">Manejar gastos</string>
    <string name="actualizar_salario2">Actualizar salario</string>
    <string name="inicio">Inicio</string>
    <string name="gastos">Gastos</string>
    <string name="planeacion">Planeacion</string>
    <string name="acerca">Sobre nosotros</string>
    <string name="ingresa_el_de_ahorros" translatable="false">Ingresa_el_de_ahorros</string>
    <string name="agregas_gasto">+ Agregas Gasto</string>
    <string name="ingresa_el_de_ahorros2">Ingresa el % de ahorros:</string>
    <string name="nombre_de_categor_a">Nombre de Categoría</string>
    <string name="nombre_del_gasto">Nombre del Gasto</string>
    <string name="cantidad5">Cantidad</string>
    <string name="el_total_de_los_porcentajes_no_puede_exceder_el_100">El total de los porcentajes no puede exceder el 100%</string>
    <string name="gasto_fijo">Gasto Fijo</string>
    <string name="ahorro">Ahorro</string>
    <string name="inversion1">Inversión</string>
    <string name="inversi_n_2f">Inversión: %.2f</string>
    <string name="ahorro_2f">Ahorro: %.2f</string>
    <string name="gasto_fijo_2f">Gasto Fijo: %.2f</string>
    <string name="total_disponible_2f">Total Disponible: %.2f</string>
    <string name="sin_gastos">Sin Gastos</string>
    <string name="ocurrio_un_error_al_crear_el_gasto">Ocurrio un error al crear el gasto</string>
    <string name="gasto_creado_correctamente">Gasto creado correctamente</string>
    <string name="fecha_inv_lida">Fecha inválida</string>
    <string name="no_importante">No importante</string>
    <string name="por_favor_ingresa_un_nombre_para_el_gasto">Por favor, ingresa un nombre para el gasto</string>
    <string name="por_favor_ingresa_una_cantidad_v_lida">Por favor, ingresa una cantidad válida</string>
    <string name="no_hay_suficiente_saldo_para_procesar_la_transaccion">No hay suficiente saldo para procesar la transaccion</string>
    <string name="nada_en_este_d_a">Nada en este día</string>
    <string name="la_creacion_de_la_categoria_a_sido_exitosa">La creacion de la categoria a sido exitosa</string>
    <string name="ocurrio_un_error_al_mostrar_la_categoria">Ocurrio un error al mostrar la categoria</string>
    <string name="importante">Importante</string>
    <string name="por_favor_ingresa_un_nombre_para_el_gasto2">Por favor, ingresa un nombre para el gasto</string>
    <string name="por_favor_ingresa_una_cantidad_v_lida2">Por favor, ingresa una cantidad válida</string>
    <string name="no_hay_suficiente_saldo_para_procesar_la_transaccion2">No hay suficiente saldo para procesar la transaccion</string>
    <string name="fecha_inv_lida2">Fecha inválida</string>
    <string name="importanteq">Importante</string>
    <string name="gasto_creado_correctamenteq">Gasto creado correctamente</string>
    <string name="ocurrio_un_error_al_crear_el_gasto1">Ocurrio un error al crear el gasto</string>
    <string name="imagen_guardada_en">"Imagen guardada en: "</string>
    <string name="error_al_guardar_la_imagen">Error al guardar la imagen</string>
    <string name="el_campo_del_salario_no_puede_estar_vac_o">El campo del salario no puede estar vacío</string>
    <string name="el_salario_no_puede_ser_0_o_menor_de_0">El salario no puede ser 0 o menor de 0</string>
    <string name="salario_modificado">Salario modificado</string>
    <string name="no_se_pudo_actualizar_el_salario">No se pudo actualizar el salario</string>
    <string name="ya_existe_un_usuario_registrado">Ya existe un usuario registrado.</string>
    <string name="el_campo_de_nombre_est_vac_o">El campo de nombre está vacío</string>
    <string name="monto_no_v_lido">Monto no válido</string>
    <string name="creaci_n_de_datos_completada">Creación de datos completada</string>
    <string name="ocurri_un_error_al_crear_el_usuario">Ocurrió un error al crear el usuario</string>
    <string name="confirmar_eliminaci_n">Confirmar eliminación</string>
    <string name="est_s_seguro_de_que_deseas_eliminar_este_gasto">¿Estás seguro de que deseas eliminar este gasto?</string>
    <string name="s">Sí</string>
    <string name="no">No</string>
    <string name="confirmar_eliminacion_codigo">Confirmar Eliminacion</string>
    <string name="confirmar_msg_codigo">Todos los gastos relacionados con esta categoría se eliminarán. ¿Está seguro?</string>
    <string name="btn_eliminar_codigo">Eliminar</string>
    <string name="btn_cancelar_codigo">Cancelar</string>
    <string name="btn_add_salary">Añadir</string>
    <string name="btn_substract_salary">Restar</string>
    <string name="esta_restando_m_s_de_lo_que_tiene_actualmente">Esta restando más de lo que tiene actualmente</string>
    <string name="calcular">Calcular</string>}
    <string name="btn_update">Update</string>
    <string name="importante3">Importante</string>
    <string name="no_puede_crear_una_categoria_vacia">No puede crear una categoria vacia</string>
    <string name="btn_calc_dinero_pln">Calcular dinero</string>
    <string name="la_categoria_no_puede_estar_vacia">La categoria no puede estar vacia</string>
</resources>