<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/nombre_space"
            android:textAlignment="textEnd"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txt_nombre_important_expence"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/cantidad"
            android:textAlignment="textEnd"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txt_cantidad_important_expence"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="numberDecimal"
            tools:ignore="Autofill" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/fecha"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/textView_fecha"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/important_expence_date"
            android:padding="8dp"
            android:textSize="20sp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_important_expences_cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/x" />

        <Button
            android:id="@+id/btn_important_expences_ok"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="#1A611B"
            android:text="@string/ok" />

    </LinearLayout>
</LinearLayout>