<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_detalle_evento">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:elevation="4dp"
        android:gravity="end"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:contentDescription="@string/returnBTN"
            android:onClick="VolverMain"
            app:tint="@color/white"
            android:src="@drawable/baseline_arrow_back_24"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtCategoria"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/fechaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:textColor="@color/textcolor"
        android:text="@string/fecha2"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/eventoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textcolor"
        android:text="@string/evento"
        android:textSize="18sp" />

</LinearLayout>